# layerhost

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-release.yml
Source/: AudioClipEditorWindow.h  AudioEngine.cpp  AudioEngine.h  Item.cpp  Item.h  Main.cpp  MainComponent.cpp  MainComponent.h  PianoRollWindow.h  Track.cpp  Track.h
Source/stubs/: 0001-Fix-JUCE-8-API-changes.patch
Source/stubs/juce_audio_plugin_client/AU/CoreAudioUtilityClasses/: CAXException.h
Source/stubs/juce_core/native/: juce_mac_CFHelpers.h
